# Game_of_Life_Python

./: LICENSE  README.md  pyproject.toml
Game_of_Life/: TerminalTest.txt  __init__.py  __main__.py  cli.py  grid.py  patterns.py  patterns.toml  views.py
